--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ cache:
   directories:
   - node_modules
 script:
-- TAG=$(git describe --abbrev=0 --tags)
+- TAG=:$(git describe --abbrev=0 --tags)
 - docker login --username yehiyam --password ${DOCKER_HUB_PASS}
 - docker build -t hkube/mondial${TAG} .
 - docker push hkube/mondial${TAG}
+- envsubst < ./mondial.yml | kubectl apply -f -
